Fixed username wrapping issue on phone view. Fixed Admin icon moved to the right on next line in profile-info viewed from an admin

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -3096,6 +3096,10 @@ iframe.g-map {
 	padding-top: 50px;
 }
 
+.padding-top-10 {
+	padding-top: 10px;
+}
+
 .padding-bottom-70 {
 	padding-bottom: 50px;
 }
